# config-visualizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini  visualize.py
.github/workflows/: pre-commit.yml  run-checks.yml
data/: org.precice.config_visualizer.desktop  org.precice.config_visualizer.metainfo.xml  org.precice.configvisualizer.desktop
precice/configvisualizer/: common.py  window.py
preciceconfigvisualizer/: cli.py  common.py  window.py
sample/: config-docs.xml  precice-3-config.xml  precice-config.xml
samples/v2/: generated.xml
samples/v3/: jit.xml  many-participants.xml
tests/: dot_test.py  parser_test.py
